--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "xerxes-react-pagination",
   "version": "0.0.1",
   "description": "react pagination ",
-  "main": "index.js",
+  "main": "./lib/index.js",
   "scripts": {
     "test": "jest --watch",
     "start": "cross-env NODE_ENV=development parcel examples/index.html --open ",
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
+    "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
   }
