--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,21 @@
     }],
     "react"
   ],
+  "env": {
+    "test": {
+      "presets": [["env"], "react"],
+      "plugins": [
+        ["transform-class-properties", {
+          "spec": true
+        }]
+        
+      ]
+    }
+  },
   "plugins": [
-    "transform-class-properties"
+    ["transform-class-properties", {
+      "spec": true
+    }]
+    
   ]
 }
