--- a/package.json
+++ b/package.json
@@ -25,16 +25,21 @@
   "homepage": "https://github.com/Hip-Hop-II/xerxes-react-pagination#readme",
   "devDependencies": {
     "autoprefixer": "^9.0.2",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^23.4.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "cross-env": "^5.2.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^5.2.0",
     "eslint-config-standard": "^11.0.0",
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
+    "jest": "^23.4.2",
     "parcel-bundler": "^1.9.7",
     "postcss-modules": "^1.3.2"
   },
@@ -43,5 +48,18 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
+  },
+  "browserslist": [
+    "last 2 version",
+    "> 1%",
+    "IE 10"
+  ],
+  "jest": {
+    "setupTestFrameworkScriptFile": "./jest/setupTests.js",
+    "testURL": "http://localhost",
+    "transform": {
+      "^.+\\.(js|jsx|mjs)$": "./node_modules/babel-jest",
+      "^.+\\.css$": "./jest/cssTransform.js"
+    }
   }
 }
